fix double border on foryou on homepage

--- a/apps/fair/stylesheets/overview.styl
+++ b/apps/fair/stylesheets/overview.styl
@@ -213,7 +213,7 @@ left-column-width = 200px
 
 .for-you-container
   .foryou-section 
-    margin-top 20px
+    margin-top -1px
     margin-bottom 20px
     .artworks
       margin-top: 10px
